<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RadioToVideo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen5">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_about_video"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155"
        tools:text="@string/question_about_video" />

    <RadioGroup
        android:id="@+id/radioChoiceGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.258">

        <RadioButton
            android:id="@+id/BeginnerRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forBeginners" />

        <RadioButton
            android:id="@+id/IntermediateRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forIntermediatePlayers" />

        <RadioButton
            android:id="@+id/ExperiencedRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forExperience" />
    </RadioGroup>

    <Button
        android:id="@+id/button_screen5_to_screen6"
        android:layout_width="181dp"
        android:layout_height="75dp"
        android:layout_marginBottom="100dp"
        android:text="@string/nextPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioChoiceGroup"
        app:layout_constraintVertical_bias="0.502" />

</androidx.constraintlayout.widget.ConstraintLayout>